--- a/.config/termite/config
+++ b/.config/termite/config
@@ -7,7 +7,7 @@ allow_bold = true
 clickable_url = true
 #dynamic_title = true
 #font = Monospace 11
-font = Fira Code Regular 10
+font = MesloLGS NF Regular 10
 #fullscreen = true
 #icon_name = terminal
 #mouse_autohide = false
