--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,2 +1,2 @@
-rofi.theme: /usr/share/rofi/themes/Adapta-Nokto.rasi
 rofi.font: Liberation Sans Mono 10
+rofi.theme: /home/johan/.config/rofi/themes/material-ocean.rasi
