--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,124 +1,163 @@
-let mapleader = " "
+set ignorecase
+set smartcase
+set scrolloff=3 " 3 lines above/below cursor when scrolling
+
+vmap <C-c> "py
+nmap <C-c> "pyiw
+vmap <C-p> "pp
+nmap <C-p> "pP
+imap <C-p> <Esc>"ppa
+
+
+" Emulated Plugins
 set surround
+
+" Copy to system clipboard as well
+set clipboard+=unnamed
+
+" Use Idea to join lines smartly
+set ideajoin
+
+" Multiple cursors support
 set multiple-cursors
-set history=1000
-set visualbell
-set noerrorbells
-set incsearch " Highlight search results when typing
-set hlsearch " Highlight search results
-set relativenumber " relative numbers
-set scrolloff=3 " Display at least 3 lines around you cursor
-set ignorecase " Ignore case when searching
-set smartcase " If there is an uppercase in your search term
-set clipboard=unnamed
-set sneak
-set easymotion
 
+" These settings are from - https://github.com/Valloric/dotfiles/blob/master/intellij/ideavimrc
 
-" KEYMAP
-nnoremap <c-h> :set hlsearch!<CR>
+let mapleader = ","
+" let mapleader = " "
+" let maplocalleader = ","
 
-map <c-n> <a-n>
-map <c-x> <a-x>
-map <c-p> <a-p>
-map g<c-n> g<a-p>
-nnoremap <c-w>j :action Activatesbt-shell-toolwindowToolWindow<CR>
+" Use Q for formatting the current paragraph (or visual selection)
+vmap Q gq
+nmap Q gqap
 
-nnoremap <C-l> :<C-u>nohlsearch<CR><C-l>
+" These create newlines like o and O but stay in normal mode
+nmap zj o<Esc>k
+nmap zk O<Esc>j
 
-" Pasting from yank history
-nnoremap <leader>y :action PasteMultiple<CR>
+" key bindings for quickly moving between windows
+" h left, l right, k up, j down
+" nmap <leader>h <c-w>h
+" nmap <leader>l <c-w>l
+" nmap <leader>k <c-w>k
+" nmap <leader>j <c-w>j
 
-" Comment
-nnoremap <leader>cc :action CommentByLineComment<CR>
-vmap <leader>cc :action CommentByLineComment<CR>
-vmap <leader>cb :action CommentByBlockComment<CR>
+noremap <Up> <Nop>
+noremap <Down> <Nop>
+noremap <Left> <Nop>
+noremap <Right> <Nop>
 
-" Menus
-nnoremap <leader>m :action ActivateProjectToolWindow<CR>
+" Closing tabs
+nmap <leader>q :action CloseContent<cr>
+nmap <leader>Q :action ReopenClosedTab<cr>
 
-" Refactorings
-nnoremap <leader>oi :action OptimizeImports<CR>
-nnoremap <leader>rn :action RenameElement<CR>
-nnoremap <leader>rf :action RenameFile<CR>
-nnoremap <leader>ri :action Inline<CR>
-nnoremap <leader>rv :action IntroduceVariable<CR>
-nnoremap <leader>rm :action ExtractMethod<CR>
-nnoremap <leader>rr :action Refactorings.QuickListPopupAction<CR>
+" To navigate between split panes
+nmap <leader>wo :action NextSplitter<cr>
+nmap <leader>wp :action PrevSplitter<cr>
+nmap <leader>j :action PrevSplitter<cr>
 
-vmap <leader>rp :action IntroduceParameter<CR>
-vmap <leader>rn :action RenameElement<CR>
-vmap <leader>rf :action RenameFile<CR>
-vmap <leader>ri :action Inline<CR>
-vmap <leader>rv :action IntroduceVariable<CR>
-vmap <leader>rm :action ExtractMethod<CR>
-vmap <leader>rr :action Refactorings.QuickListPopupAction<CR>
-vmap <leader>rr :action Refactorings.QuickListPopupAction<CR>
-nnoremap <leader>rp :action IntroduceParameter<CR>
-nnoremap <leader>im :action ImplementMethods<CR>
-nnoremap <leader>om :action OverrideMethods<CR>
-nnoremap <leader>qf :action ShowIntentionActions<CR>
-nnoremap <leader>F :action ReformatCode<CR>
-
-" GoTo
-nnoremap gd :action GotoDeclaration<CR>
-nnoremap gr :action FindUsages<CR>
-nnoremap <leader>gi :action GotoImplementation<CR>
-nnoremap <leader>gs :action ActivateStructureToolWindow<CR>
-nnoremap <leader>sp :action ParameterInfo<CR>
-nnoremap <leader>si :action Scala.ShowImplicitArguments<CR>
-nnoremap <leader>sd :action QuickImplementations<CR>
-
-" Types
-nnoremap K :action Scala.TypeInfo<CR>
-vmap K :action Scala.TypeInfo<CR>
-
-" Search
-nnoremap <leader>fs :action GotoSymbol<CR>
-nnoremap <leader>ff :action GotoFile<CR>
-nnoremap <leader>fc :action GotoClass<CR>
-nnoremap <leader>fa :action GotoAction<CR>
-nnoremap <leader>fg :action FindInPath<CR>
-nnoremap <leader>fr :action ReplaceInPath<CR>
-vmap <leader>fg :action FindInPath<CR>
-vmap <leader>fr :action ReplaceInPath<CR>
-
-" Test and Run
-nnoremap <leader>gt :action GotoTest<CR>
-nnoremap <leader>tn :action RunClass<CR>
-nnoremap <leader>tl :action Rerun<CR>
-nnoremap <leader>tf :action RerunFailedTests<CR>
-
-" Undo
-nnoremap <leader>uh :action LocalHistory.ShowHistory<CR>
-
-" Jumping
-" built-in navigation to navigated items works better
-nnoremap <c-o> :action Back<cr>
-nnoremap <c-i> :action Forward<cr>
+" Splits manipulation
+nmap <leader>ws :action SplitHorizontally<cr>
+nmap <leader>wv :action SplitVertically<cr>
+nmap <leader>wc :action Unsplit<cr>
+nmap <leader>wC :action UnsplitAll<cr>
+nmap <leader>wd :action OpenEditorInOppositeTabGroup<cr>
+nmap <leader><leader> :action VimFilePrevious<cr>
+" nmap <leader>ww :action JumpToLastWindow<cr>
 
 " Navigation
-nnoremap ]c :action GotoNextError<cr>
-nnoremap [c :action GotoPreviousError<cr>
-nnoremap ]h :action VcsShowNextChangeMarker<cr>
-nnoremap [h :action VcsShowPrevChangeMarker<cr>
-nnoremap <leader>se :action ShowErrorDescription<cr>
+nmap <leader>h :action Back<cr>
+nmap <leader>l :action Forward<cr>
+nmap <leader>L :action RecentLocations<cr>
+nmap <leader>g :action GotoDeclaration<cr>
+nmap <leader>u :action FindUsages<cr>
+nmap <leader>f :action GotoFile<cr>
+nmap <leader>c :action GotoClass<cr>
+nmap <leader>s :action GotoSymbol<cr>
+" nmap <leader>m :action FileStructurePopup<cr>
+nmap <leader>; :action FileStructurePopup<cr>
+nmap <leader>M :action ActivateStructureToolWindow<cr>
+nmap <leader>d :action ShowErrorDescription<cr>
+nmap <leader>i :action GotoImplementation<cr>
+nmap <leader>I :action SelectIn<cr>
+nmap <leader>e :action RecentFiles<cr>
+nmap <leader>t :action GotoTest<cr>
+nmap <leader>p :action JumpToLastWindow<cr>
+nmap <leader>b :action ShowBookmarks<cr>
 
-" Misc
-nnoremap <leader>vr :source ~/.ideavimrc<CR>
-noremap <leader>vr :source ~/.ideavimrc<CR>
+" nmap <leader>a :action Switcher<cr>
+nmap <leader>a :action RecentChangedFiles<cr>
 
-" Disable Arrows
-map <left> <nop>
-map <down> <nop>
-map <up> <nop>
-map <right> <nop>
+" Errors
+nmap <leader>x :action GotoNextError<cr>
+nmap <leader>X :action GotoPreviousError<cr>
 
-" Insert mode
+" Refactorings
+vmap T :action Refactorings.QuickListPopupAction<cr>
+nmap <leader>rr :action RenameElement<cr>
+nmap <leader>rg :action Generate<cr>
+nmap <leader>rI :action OptimizeImports<cr>
+" Inspection
+nmap <leader>rc :action InspectCode<cr>
 
-" imap <left> <nop>
-" imap <down> <nop>
-" imap <up> <nop>
-" imap <right> <nop>
-set clipboard+=ideaput
-nnoremap <esc> :noh<return><esc>
+" VCS operations
+nmap <leader>yy :action Vcs.Show.Local.Changes<cr>
+nmap <leader>yp :action Vcs.QuickListPopupAction<cr>
+nmap <leader>ya :action Annotate<cr>
+nmap <leader>yl :action Vcs.Show.Log<cr>
+nmap <leader>yd :action Compare.LastVersion<cr>
+" nmap <leader>yr :action Git.ResolveConflicts<cr>
+
+" Terminal
+nmap <leader>T :action ActivateTerminalToolWindow<cr>
+
+" External GVim
+nmap <leader>v :action Tool_External Tools_gvim<cr>
+
+" External Emacs
+nmap <leader>E :action Tool_External Tools_emacsclient<cr>
+
+" External Sublime Text
+nmap <leader>S :action Tool_External Tools_sublime_text<cr>
+
+" IdeaVim uses 'a' for alt instead of Vim's 'm'
+nmap <a-j> 15gj
+nmap <a-k> 15gk
+
+" Won't work in visual mode (with vmap) for some reason.
+" Use default map of <c-/> for that.
+nmap gcc :action CommentByLineComment<cr>
+
+" unimpaired mappings - from https://github.com/saaguero/ideavimrc/blob/master/.ideavimrc
+nnoremap [<space> O<esc>j
+nnoremap ]<space> o<esc>k
+nnoremap [q :action PreviousOccurence<cr>
+nnoremap ]q :action NextOccurence<cr>
+nnoremap [m :action MethodUp<cr>
+nnoremap ]m :action MethodDown<cr>
+nnoremap [c :action VcsShowPrevChangeMarker<cr>
+nnoremap ]c :action VcsShowNextChangeMarker<cr>
+" Tabs
+nnoremap [b :action PreviousTab<cr>
+nnoremap ]b :action NextTab<cr>
+
+" Search
+nmap <leader>/ :action Find<cr>
+nmap <leader>\ :action FindInPath<cr>
+
+" Moving lines
+nmap [e :action MoveLineUp<cr>
+nmap ]e :action MoveLineDown<cr>
+" Moving statements
+nmap [s :action MoveStatementUp<cr>
+nmap ]s :action MoveStatementDown<cr>
+
+" Building, Running and Debugging
+nmap ,c :action CompileDirty<cr>
+nmap ,r :action Run<cr>
+nmap ,R :action RunAnything<cr>
+nmap ,b :action Debug<cr>
+nmap ,c :action RunClass<cr>
+nmap ,d :action DebugClass<cr>
+nmap ,t :action RerunTests<cr>
+nmap ,T :action RerunFailedTests<cr>
