--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,7 +41,8 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec st
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -180,3 +181,18 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Disable Window Title Bar
+
+default_border pixel 1
+default_floating_border pixel 1
+
+# Rofi Launch application
+bindsym $mod+p exec rofi -show drun -show-icons
+
+# Auto start apps
+
+exec --no-startup-id nitrogen --restore
+exec --no-startup-id /usr/bin/nm-applet
+exec --no-startup-id volumeicon 
+
