--- a/.config/i3/config
+++ b/.config/i3/config
@@ -42,7 +42,7 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec st
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -102,6 +102,7 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
+
 # focus the child container
 #bindsym $mod+d focus child
 
@@ -160,7 +161,7 @@ mode "resize" {
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -178,8 +179,12 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+
+
+# pip install --user bumblebee-status
 bar {
-        status_command i3status
+    position top
+    status_command ~/.local/bin/bumblebee-status -m spotify weather xrandr nic disk:root cpu memory battery date time amixer -p root.path=/ time.format="%H:%M" date.format="%a, %b %d %Y" -t onedark-powerline 
 }
 
 # Disable Window Title Bar
